--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: riot labs
+description: Blogging about tech, embedded, open source, life
+meta_description: "meta description"
 
 markdown: kramdown
 highlighter: pygments
@@ -12,5 +12,5 @@ google_analytics: 'UA-XXXXXXXX-X'
 plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
+url:            'https://blog.riot-labs.de'
 author:         'Your Name'
